# RAJA

./: CMakeLists.txt
chai_issue/: CMakeLists.txt  main.cpp
cmake/: RAJAMacros.cmake  SetupPackages.cmake  SetupRajaConfig.cmake
examples/: ex-shared-matrix-transpose.cpp  tut_batched-matrix-multiply.cpp
include/RAJA/: config.hpp.in
include/RAJA/util/: RestrictView.hpp  View.hpp
test/functional/: CMakeLists.txt
test/legacy/: CMakeLists.txt
test/unit/: CMakeLists.txt
